--- a/sample3.html
+++ b/sample3.html
@@ -24,6 +24,30 @@
 			color:blue;
 			font-size:14pt; /* pt-물리적크기, px -상대적크기*/
 		}
+
+		/* .는 class 속성으로 접근한다. */
+		.blue{
+			color:#0000ff;
+			/* 0~255 => 00~FF 
+				0이 젤 약하게 빛을 내보낸다. 255 제일 쎔
+				#ff0000 - red
+				#000000 - black
+				#ffffff - white
+				#0000ff - blue
+			*/
+			
+		}
+
+		h1.atype{ /* h1태그에 class=atype 이라고 주었을 대만 적용된다.*/
+			color:yellow;
+			padding:10px;
+
+		}
+		h1.btype{
+			color:cyan;
+			padding:15px;
+
+		}
 	</style>
  </head>
 
@@ -33,11 +57,26 @@
  	<p>단락에 스타일 지정하기</p>
  
 	<!-- 태그에 일반적으로 붙이는 속성중에 id, class, name
-		id = 무조건 단수다. 하나의 페이지에 동일한 아이디를 갖는 태그를 가지면 안된다. 모든 태그에 다 있는 속성임. JS, html내의 태그를 프로그램적으로 접근 가능한 언어가 있다. 이 언어가 id는 무조건 하나만
+		id - 무조건 단수다. 하나의 페이지에 동일한 아이디를 갖는 태그를 가지면 안된다. 모든 태그에 다 있는 속성임. JS, html내의 태그를 프로그램적으로 접근 가능한 언어가 있다. 이 언어가 id는 무조건 하나만
 		
+		name - 서버로 정보를 전송할 때 사용. input 태그로 값을 입력받는 태그들만 이 속성을 가질 수 있다. 배열로 처리하기 때문에 같은 이름 가능함. css와 관련x
+		h,p,div, span, table... 이런 태그는 name 속성 없다. 
+
+		class - 디자인과 관련, 배열로 줄 수 있다. 모든 태그가 가질 수 있는 속성이다.
+
 		-->	 	
  	<h2 id="blue">새로운 스타일 방식 적용하기</h2> 
- 	<h3 id="blue">새로운 스타일 방식 적용하기</h3> 
+ 	<h3 id="blue">새로운 스타일 방식 적용하기</h3>
+	
+ 	<h2 class="blue">새로운 스타일 방식 적용하기</h2> 
+ 	<h1 class="blue">새로운 스타일 방식 적용하기</h1> 
+ 	<h2 class="blue">새로운 스타일 방식 적용하기</h2> 
+ 	<h2 class="blue">새로운 스타일 방식 적용하기</h2> 
+ 	<h2 class="blue">새로운 스타일 방식 적용하기</h2> 
+	
+	<h1 class = "atype"> atype</h1>
+	<h1 class = "btype"> btype</h1>
+
 
  </body>
 
